@@ -30,6 +30,10 @@ Helper functions:
 .. autofunction:: get_writer_for
 .. autofunction:: guess_format
 
+.. autofunction:: triclinic_box
+.. autofunction:: triclinic_vectors
+.. autofunction:: box_volume
+
 """
 import os.path
 import MDAnalysis.coordinates
@@ -227,38 +231,51 @@ def triclinic_box(x,y,z):
     return numpy.array([A,B,C,alpha,beta,gamma], dtype=numpy.float32)
 
 def triclinic_vectors(dimensions):
-        """Convert [A,B,C,alpha,beta,gamma] to a triclinic box representation.
+    """Convert `[A,B,C,alpha,beta,gamma]` to a triclinic box representation.
 
-        Original code by Tsjerk Wassenaar; see http://www.mail-archive.com/gmx-users@gromacs.org/msg28032.html
+    Original code by Tsjerk Wassenaar; see http://www.mail-archive.com/gmx-users@gromacs.org/msg28032.html
 
-        :Arguments:
-          *dimensions*
-             list of box lengths and angles (in degrees) such as
-             [A,B,C,alpha,beta,gamma]
+    :Arguments:
+      *dimensions*
+        list of box lengths and angles (in degrees) such as
+        [A,B,C,alpha,beta,gamma]
 
-        :Returns: numpy 3x3 array B, with B[0] = first box vector,
-                  B[1] = second vector, B[2] third box vector.
+    :Returns: numpy 3x3 array B, with B[0] = first box vector,
+              B[1] = second vector, B[2] third box vector.
 
-        .. note:: The first vector is always pointing along the
+    .. note:: The first vector is always pointing along the
                   X-axis i.e. parallel to (1,0,0).
-        """
-        B = numpy.zeros((3,3), dtype=numpy.float32)
-        x, y, z, a, b, c = dimensions[:6]
+    """
+    B = numpy.zeros((3,3), dtype=numpy.float32)
+    x, y, z, a, b, c = dimensions[:6]
 
-        B[0][0] = x
-        if a == 90. and b == 90. and c == 90.:
-                B[1][1] = y
-                B[2][2] = z
-        else:
-                a = deg2rad(a)
-                b = deg2rad(b)
-                c = deg2rad(c)
-                B[1][0] = y*cos(c)
-                B[1][1] = y*sin(c)
-                B[2][0] = z*cos(b)
-                B[2][1] = z*(cos(a)-cos(b)*cos(c))/sin(c)
-                B[2][2] = sqrt(z*z-B[2][0]**2-B[2][1]**2)
-        return B
+    B[0][0] = x
+    if a == 90. and b == 90. and c == 90.:
+        B[1][1] = y
+        B[2][2] = z
+    else:
+        a = deg2rad(a)
+        b = deg2rad(b)
+        c = deg2rad(c)
+        B[1][0] = y*cos(c)
+        B[1][1] = y*sin(c)
+        B[2][0] = z*cos(b)
+        B[2][1] = z*(cos(a)-cos(b)*cos(c))/sin(c)
+        B[2][2] = sqrt(z*z-B[2][0]**2-B[2][1]**2)
+    return B
 
+def box_volume(dimensions):
+    """Return the volume of the unitcell described by *dimensions*.
 
+    The volume is computed as `det(x1,x2,x2)` where the xi are the
+    triclinic box vectors from :func:`triclinic_vectors`.
 
+    :Arguments:
+       *dimensions*
+          list of box lengths and angles (in degrees) such as
+          [A,B,C,alpha,beta,gamma]
+
+    :Returns: numpy 3x3 array B, with B[0] = first box vector,
+              B[1] = second vector, B[2] third box vector.
+    """
+    return numpy.linalg.det(triclinic_vectors(dimensions))
